--- a/day2bio.html
+++ b/day2bio.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<html>
 <head>
 	<meta charset="utf-8">
 	<title>Activity 1: Basic HTML bio</title>
+	<style>
+	/* h1 class css rule */
+		h1{
+			margin-bottom: 15px;
+
+			font-size: 60px;
+
+			color: green;
+
+			text-align: center;
+
+			text-decoration: underline;
+
+			background-color: black;
+
+		}
+	</style>
 </head>
+
 <body>
+
+	<h1>Student Bio</h1>
+	<div>
+		<h2>Ruben Reyes</h2>
+		<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-1/p320x320/13903295_10107967470437250_8656732842680033488_n.jpg?oh=887a89b5edd3e4f86345b009d973ae5d&oe=5927537C" alt="Rubens Picture" width="200" height="200">
+		<br>
+			<p>I currently live in Houston, Texas and work as a technology contracts specialist at TechnipFMC. I received my undergrand from the University of Texas at Austin and grew up in El Paso, Texas. I love learning new things and traveling (traveling involves lots of learning).</p>
+		
+		<section>
+			<h2>Contact Info</h2>
+			<ul>
+				<li><strong>Email: </strong><a href="ruben.r.reyes@gmail.com">Ruben.R.Reyes@gmail.com</a></li>
+				<li><strong>Github: </strong><a href="https://github.com/rr4986">rr4986</a></li>	
+				<li><strong>Portfolio: </strong><a href="#">Coming Soon</a></li>
+			</ul>
+
+		</section>
+	</div>
 
 </body>
 </html>
