removed extra files

--- a/student-bio.html
+++ b/student-bio.html
@@ -4,7 +4,7 @@
 
 	<meta charset="utf-8">
 	<title>Activity 1: Basic HTML bio</title>
-	<link rel="stylesheet" type="text/css" href="/Users/rubenreyes/Desktop/utcoding/code/day_2/Bio-Page/style.css">
+	<link rel="stylesheet" type="text/css" href="Bio-Page/style.css">
 
 </head>
 
